syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/user_v1;user_v1";

service UserV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  int64 age = 3;
}

message CreateUserResponse {
  string uuid = 1;
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string uuid = 1;
  UserProfile profile = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UserProfile {
  string first_name = 1;
  string last_name = 2;
  int64 age = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
